--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><img src="../chocolate-pizza/img/insta-icon.png"/></li>
     <li><img src="../chocolate-pizza/img/flic-icon.png"/></li>
     <li><img src="../chocolate-pizza/img/pint-icon.png"/></li>
-    <li><img src="../chocolate-pizza/img/rss-icon.png"/></li>
+    <li><img class="lasttwo" src="../chocolate-pizza/img/rss-icon.png"/></li>
     <li><img src="../chocolate-pizza/img/mail-icon.png"/></li>
   </ul>
 </header>
@@ -44,14 +44,14 @@
       <li>1/2 cup brown sugar</li>
       <li>2-4 tbsp water</li>
     </ul>
-    <ul class="leftlist">
+    <ul class="leftlist rightlist">
       <li>1 1/2 cups heavy cream</li>
-      <li>1/3 granulated sugar</li>
-      <li>2 egg yolks</li>
+      <li><s>1/3 granulated sugar</s></li>
+      <li><s>2 egg yolks</s></li>
       <li>1 lemon, juiced</li>
       <li>2 tbsp butter</li>
-      <li>1 cup honey roasted pecans, roughly chopped</li>
-    </ul><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <li>1 cup honey roasted pecans, roughly <p>chopped</p></li>
+    </ul><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   </section>
 
 </body>
@@ -60,18 +60,18 @@
     <div class="bar"></div>
     <img src="../chocolate-pizza/img/van-pic.png"/>
     <h3>Vanessa Stevenson</h3>
-    <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+    <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p><br><br>
     <button>SHARE RECIPE</button>
   </section>
 
   <div class="clearfix"></div>
   <br><br>
-  <hr>
   <div class="endingcontent">
-  <img src="../chocolate-pizza/img/small-logo.png"/>
-  <p>Delicious &#169; 2013 &#183; All Rights Reserved.</p><br>
+  <hr>
+  <img src="../chocolate-pizza/img/small-logo.png"/><br>
+  <p>Delicious &#169; 2013 &#183; All Rights Reserved.</p>
   <p>Proudly published with Ghost.</p>
-  </div>
+</div>
 </footer>
 
 </html>
