--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   <p>Delicious &#169; 2013 &#183; All Rights Reserved.</p>
   <p>Proudly published with Ghost.</p>
 </div>
+<img class="checkbox" src="../chocolate-pizza/img/checkbox.png"/>
+<img class="checkbox2" src="../chocolate-pizza/img/checkbox2.png"/>
 </footer>
 
 </html>
