another last touch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <li><p class="cursive">Delicious</p><p class="strong">THE BEST FOOD BLOG ON THE WEB</p></li>
     
   </ul>
-  <ul class="fuck">
+  <ul class="iconimages">
     <li><img src="../chocolate-pizza/img/fb-icon.png"/></li>
     <li><img src="../chocolate-pizza/img/twit-icon.png"/></li>
     <li><img src="../chocolate-pizza/img/gp-icon.png"/></li>
