--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
     </ul>
     <img class="listimg" src="../chocolate-pizza/img/list-bg.png"/>
     <ul class="leftlist">
-      <li>1 1/2 cups milk</li>
-      <li>1/2 cup mascarpone</li>
-      <li>1/2 tsp pink salt</li>
-      <li>1 lb Black Mission Figs</li>
-      <li>1/2 cup brown sugar</li>
-      <li>2-4 tbsp water</li>
+      <li><input type="checkbox"> 1 1/2 cups milk</li>
+      <li><input type="checkbox"> 1/2 cup mascarpone</li>
+      <li><input type="checkbox"> 1/2 tsp pink salt</li>
+      <li><input type="checkbox"> 1 lb Black Mission Figs</li>
+      <li><input type="checkbox"> 1/2 cup brown sugar</li>
+      <li><input type="checkbox"> 2-4 tbsp water</li>
     </ul>
     <ul class="leftlist rightlist">
-      <li>1 1/2 cups heavy cream</li>
-      <li><s>1/3 granulated sugar</s></li>
-      <li><s>2 egg yolks</s></li>
-      <li>1 lemon, juiced</li>
-      <li>2 tbsp butter</li>
-      <li>1 cup honey roasted pecans, roughly <p>chopped</p></li>
+      <li><input type="checkbox"> 1 1/2 cups heavy cream</li>
+      <li><input type="checkbox"> <s> 1/3 granulated sugar</s></li>
+      <li><input type="checkbox"> <s> 2 egg yolks</s></li>
+      <li><input type="checkbox"> 1 lemon, juiced</li>
+      <li><input type="checkbox"> 2 tbsp butter</li>
+      <li><input type="checkbox"> 1 cup honey roasted pecans, roughly <p>chopped</p></li>
     </ul><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   </section>
 
@@ -71,9 +71,7 @@
   <img src="../chocolate-pizza/img/small-logo.png"/><br>
   <p>Delicious &#169; 2013 &#183; All Rights Reserved.</p>
   <p>Proudly published with Ghost.</p>
-</div>
-<img class="checkbox" src="../chocolate-pizza/img/checkbox.png"/>
-<img class="checkbox2" src="../chocolate-pizza/img/checkbox2.png"/>
+</div><br><br><br><br>
 </footer>
 
 </html>
